--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Lending Tracker
+author=Guess34
+support=https://github.com/Guess34/Lend-Borrow_Tracker
+description=Tracks lending/borrowing trades and posts an optional webhook when a trade completes.
+tags=trade,lending,borrowing,tracker,webhook
+plugins=net.runelite.client.plugins.lendingtracker.LendingTrackerPlugin
