--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Lending Tracker
 author=Guess34
 support=https://github.com/Guess34/Lend-Borrow_Tracker
-description=Tracks lending/borrowing trades and posts an optional webhook when a trade completes.
-tags=trade,lending,borrowing,tracker,webhook
+description=Track item lending and borrowing between group members with marketplace, risk analysis, Discord integration, and in-game overlays
+tags=lending,borrowing,trade,group,tracker,items,marketplace,lend,borrow
 plugins=net.runelite.client.plugins.lendingtracker.LendingTrackerPlugin
