--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,10 @@ tasks.register('run', JavaExec) {
 tasks.register('shadowJar', Jar) {
 	dependsOn configurations.testRuntimeClasspath
 	manifest {
-		attributes('Main-Class': 'net.runelite.client.plugins.lendingtracker.LendingTrackerPluginTest', 'Multi-Release': true)
+		attributes(
+			'Main-Class': 'net.runelite.client.plugins.lendingtracker.LendingTrackerPluginTest',
+			'Multi-Release': true
+		)
 	}
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
